Add language contribute for spring data This is currently a placeholder until we can figure out a better way to do this

--- a/package.json
+++ b/package.json
@@ -37,6 +37,17 @@
   ],
   "main": "./dist/extension.js",
   "contributes": {
+    "languages": [
+      {
+          "id": "spring-data",
+          "aliases": [
+              "Spring Boot Properties Yaml"
+          ],
+          "filenamePatterns": [
+              "spring*.java"
+          ]
+      }
+    ],
     "snippets": [
       {"language": "java","path": "./snippets/java/managementapi.json"},
       {"language": "java","path": "./snippets/java/kvops.json"},
