Create temporary method of accessing spring data snippets Change the contribute for each SD snippet to be based on java language, rather than custom spring data language Change the prefix for each SD snippet from @cb to @cbsd

--- a/package.json
+++ b/package.json
@@ -89,14 +89,14 @@
       {"language": "csharp","path": "./snippets/dotnet/fts.json"},
       {"language": "csharp","path": "./snippets/dotnet/bootstrapping.json"},
       {"language": "csharp","path": "./snippets/dotnet/transactions.json"},
-      {"language": "spring-data","path": "./snippets/spring-data/managementapi.json"},
-      {"language": "spring-data","path": "./snippets/spring-data/kvops.json"},
-      {"language": "spring-data","path": "./snippets/spring-data/subdocops.json"},
-      {"language": "spring-data","path": "./snippets/spring-data/query.json"},
-      {"language": "spring-data","path": "./snippets/spring-data/analytics.json"},
-      {"language": "spring-data","path": "./snippets/spring-data/fts.json"},
-      {"language": "spring-data","path": "./snippets/spring-data/bootstrapping.json"},
-      {"language": "spring-data","path": "./snippets/spring-data/transactions.json"}
+      {"language": "java","path": "./snippets/spring-data/managementapi.json"},
+      {"language": "java","path": "./snippets/spring-data/kvops.json"},
+      {"language": "java","path": "./snippets/spring-data/subdocops.json"},
+      {"language": "java","path": "./snippets/spring-data/query.json"},
+      {"language": "java","path": "./snippets/spring-data/analytics.json"},
+      {"language": "java","path": "./snippets/spring-data/fts.json"},
+      {"language": "java","path": "./snippets/spring-data/bootstrapping.json"},
+      {"language": "java","path": "./snippets/spring-data/transactions.json"}
     ],
     "customEditors": [
       {
