Add couchbase template and cluster to cbsdcon

--- a/snippets/spring-data/bootstrapping.json
+++ b/snippets/spring-data/bootstrapping.json
@@ -1,7 +1,7 @@
 {
     "Connect to Cluster": {
         "prefix": ["@cbsdcon"],
-        "body": ["@Configuration","public class Config extends AbstractCouchbaseConfiguration {","","    @Override","    public String getConnectionString() {","        return \"${1:couchbase://127.0.0.1}\";","    }","","    @Override","    public String getUserName() {","        return \"${2:Administrator}\";","    }","","    @Override","    public String getPassword() {","        return \"${3:password}\";","    }","","    @Override","    public String getBucketName() {","        return \"${4:travel-sample}\";","    }","}"],
+        "body": ["@Configuration","public class Config extends AbstractCouchbaseConfiguration {","","    @Override","    public String getConnectionString() {","        return \"${1:couchbase://127.0.0.1}\";","    }","","    @Override","    public String getUserName() {","        return \"${2:Administrator}\";","    }","","    @Override","    public String getPassword() {","        return \"${3:password}\";","    }","","    @Override","    public String getBucketName() {","        return \"${4:travel-sample}\";","    }","","@Autowired","private CouchbaseTemplate couchbaseTemplate;","","@Autowired","private Cluster cluster;","}"],
         "description": "Connect to a cluster and get a reference to it, a bucket, and a collection."
     },
     "Connect to Cluster with TLS": {
